--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3.8"
+    "python.pythonPath": "/home/cloud_user/.local/share/virtualenvs/assault-A49PJt1b/bin/python"
 }
