--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/cloud_user/.local/share/virtualenvs/assault-A49PJt1b/bin/python"
+    "python.pythonPath": "/home/cloud_user/.local/share/virtualenvs/assault-A49PJt1b/bin/python",
+    "python.linting.enabled": true,
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black",
 }
